src/objects/TRAK_Release__c.object
<CustomObject>
    <description>Business Description: This object is used to record releases and record approvals for a release to be made. User Stories and Defects can be assigned to a release and releases can be linked to environments to understand what user stories or defects are in what environments at any point in time.

Used In: Release Tracker App</description>
    <fields>
        <fullName>Admin_Branch_Name__c</fullName>
        <label>Admin Branch Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Commit_ID__c</fullName>
        <label>Admin Commit ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Repository_Name__c</fullName>
        <label>Admin Repository Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Tag__c</fullName>
        <label>Admin Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <inlineHelpText>The current status of the release , as it goes through the scoping and deployment approvals.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Development Approved</fullName>
                </value>
                <value>
                    <fullName>Development Rejected</fullName>
                </value>
                <value>
                    <fullName>In Development</fullName>
                </value>
                <value>
                    <fullName>Pre - Production Deployed</fullName>
                </value>
                <value>
                    <fullName>Ready for Deployment</fullName>
                </value>
                <value>
                    <fullName>Pending Deployment Approval</fullName>
                </value>
                <value>
                    <fullName>Deployment Approved</fullName>
                </value>
                <value>
                    <fullName>Deployment Rejected</fullName>
                </value>
                <value>
                    <fullName>Production - Released</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval__c</fullName>
        <label>Approval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved_for_Pre_Production__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved for Pre-Production</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_for_Production__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved for Production</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Releases</relationshipLabel>
        <relationshipName>Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Branch_Name__c</fullName>
        <inlineHelpText>The branch name in GitHub which has the the code for all User Stories and Defects associated to this release.</inlineHelpText>
        <label>Branch Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Build_Reference_ID__c</fullName>
        <displayFormat>REL-{00000}</displayFormat>
        <label>Build Reference ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Business_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Responsibility of the Business Analyst is to monitor each release record and send the release record for approval.</inlineHelpText>
        <label>Business Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Releases (Business Analyst)</relationshipLabel>
        <relationshipName>Releases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CR_Number__c</fullName>
        <label>CR Number</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Handover_Date__c</fullName>
        <inlineHelpText>The Time of Code Handover would be in EST Time Zone.</inlineHelpText>
        <label>Code Handover Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Code_Review_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Code Review Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commit_ID__c</fullName>
        <inlineHelpText>The Commit ID of the final Tag in GitHub which has the the code for all User Stories and Defects associated to this release.</inlineHelpText>
        <label>Commit ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>This field can be used for adding additional details regarding the release.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Defects__c</fullName>
        <label>Number of Defects</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Environments__c</fullName>
        <label>Number of Environments</label>
        <summaryForeignKey>TRAK_Environment_Release__c.Release__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_User_Stories__c</fullName>
        <label>Number of User Stories</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Override_Release_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Manually setting the Release Name, please check this checkbox</description>
        <inlineHelpText>For Manually setting the Release Name, please check this checkbox</inlineHelpText>
        <label>Override Release Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Planned_Start__c</fullName>
        <label>Planned Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Product_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Owner of the application will be responsible with overseeing and confirming scope of each release.</inlineHelpText>
        <label>Product Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Releases (Product Owner)</relationshipLabel>
        <relationshipName>Releases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rejected_Reason__c</fullName>
        <label>Rejected Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Release_Date__c</fullName>
        <inlineHelpText>The date when the final tag of this release will be deployed to Production.</inlineHelpText>
        <label>Production Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Release_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Releases4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release_Number__c</fullName>
        <formula>IF(AND((Name != &apos;Rejected&apos;),(!Override_Release_Name__c)), value(left(right(Name,len(Name)-1),2)),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Release Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Release_Type__c</fullName>
        <inlineHelpText>The Release can be Weekly , Monthly or a Hotfix Release.</inlineHelpText>
        <label>Release Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Hotfix</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Repository_Name__c</fullName>
        <inlineHelpText>The Name of the repository in GitHub which has the code corresponding to all the User Stories and Defects for this release.</inlineHelpText>
        <label>Repository Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Custodian__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>System Custodian is responsible for initial and final approval of each release record before deployment into Production.</inlineHelpText>
        <label>System Custodian</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Releases (System Custodian)</relationshipLabel>
        <relationshipName>Releases3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tag__c</fullName>
        <inlineHelpText>The final Tag number in GitHub which has the the code for all User Stories and Defects associated to this release.</inlineHelpText>
        <label>Tag</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <label>Release</label>
    <nameField>
        <label>Release Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Releases</pluralLabel>
    <recordTypes>
        <fullName>Creation_of_Release</fullName>
        <active>true</active>
        <label>Creation of Release</label>
    </recordTypes>
    <recordTypes>
        <fullName>Deployment_Approval</fullName>
        <active>true</active>
        <label>Deployment Approval</label>
    </recordTypes>
    <recordTypes>
        <fullName>In_Development</fullName>
        <active>true</active>
        <label>In Development</label>
    </recordTypes>
    <recordTypes>
        <fullName>Scoping_Approval</fullName>
        <active>true</active>
        <label>Scoping Approval</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Approvers_cannot_be_same</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISCHANGED(Number_of_User_Stories__c)),(AND(ISNEW(),Number_of_User_Stories__c &gt; 0)),OR((AND((NOT(ISBLANK(Business_Analyst__c))),(NOT(ISBLANK(System_Custodian__c))),(Business_Analyst__c = System_Custodian__c))),(AND((NOT(ISBLANK(Business_Analyst__c))),(NOT(ISBLANK(Product_Owner__c))),(Business_Analyst__c = Product_Owner__c))),(AND((NOT(ISBLANK(System_Custodian__c))),(NOT(ISBLANK(Product_Owner__c))),(System_Custodian__c = Product_Owner__c)))))</errorConditionFormula>
        <errorDisplayField>Business_Analyst__c</errorDisplayField>
        <errorMessage>The Business Analyst, Product Owner and System Custodian have to be different users.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Atleast_1_Environment_Release</fullName>
        <active>false</active>
        <errorConditionFormula>AND(( ISPICKVAL( Approval_Status__c , &apos;Production - Released&apos;) ),( Number_of_Environments__c = 0))</errorConditionFormula>
        <errorDisplayField>Approval_Status__c</errorDisplayField>
        <errorMessage>Please associate this release to an environment before updating the status to &apos;Production - Released&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Atleast_1_User_Story_or_Defect</fullName>
        <active>true</active>
        <errorConditionFormula>AND((Number_of_Defects__c = 0 ), ( Number_of_User_Stories__c = 0),  ISPICKVAL( Approval_Status__c , &apos;Ready for Deployment&apos;)   )</errorConditionFormula>
        <errorDisplayField>Approval_Status__c</errorDisplayField>
        <errorMessage>Please associate at least 1 User Story or Defect before moving this release to &apos;Ready for Deployment&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Can_Only_Create_Release_in_Draft_Status</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISNEW(), NOT(ISPICKVAL(Approval_Status__c, &apos;Draft&apos;)))</errorConditionFormula>
        <errorDisplayField>Approval_Status__c</errorDisplayField>
        <errorMessage>A Release record can only be created in &apos;Draft&apos; status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Manually_Update_Release_Name</fullName>
        <active>true</active>
        <description>Cannot Manually Update Release Name</description>
        <errorConditionFormula>AND(ISCHANGED(Name), (Override_Release_Name__c = false), NOT(ISNEW()))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>You cannot update the release name. Please check the &apos;Override Release Name&apos; checkbox.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Update_Release_Name</fullName>
        <active>true</active>
        <description>TRAK Cannot Update Release Name</description>
        <errorConditionFormula>AND(ISCHANGED(Name),  (Override_Release_Name__c = false))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>You cannot change the release name once the release record is created. Please check the override checkbox for updating the release name.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_change_Tag_Number</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED( Tag__c ), OR(ISPICKVAL(Approval_Status__c, &apos;Pending Deployment Approval&apos;), ISPICKVAL(Approval_Status__c, &apos;Deployment Approved&apos;), ISPICKVAL(Approval_Status__c, &apos;Deployment Rejected&apos;), ISPICKVAL(Approval_Status__c, &apos;Production - Released&apos;)))</errorConditionFormula>
        <errorDisplayField>Tag__c</errorDisplayField>
        <errorMessage>Please update the Release Status to &apos;Ready for Deployment&apos; for updating the Tag number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_update_Override_Flag</fullName>
        <active>true</active>
        <description>Cannot Update Override Flag</description>
        <errorConditionFormula>AND((PRIORVALUE(Override_Release_Name__c) == true), (Override_Release_Name__c = false))</errorConditionFormula>
        <errorDisplayField>Override_Release_Name__c</errorDisplayField>
        <errorMessage>You cannot update the Override Release Name flag once it is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Monthly_Release</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL( Release_Type__c , &apos;Monthly&apos;)</errorConditionFormula>
        <errorDisplayField>Release_Type__c</errorDisplayField>
        <errorMessage>Currently Monthly Releases are not supported.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Production_Release_Date_cant_be_in_past</fullName>
        <active>true</active>
        <errorConditionFormula>AND((Release_Date__c &lt; today()),OR(ISNEW(),ISCHANGED(Release_Date__c)))</errorConditionFormula>
        <errorDisplayField>Approval_Status__c</errorDisplayField>
        <errorMessage>Production Release Date should be a date in the future.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Release_Process_Mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Approval_Status__c, &apos;Ready for Deployment&apos;),  OR(ISBLANK(Branch_Name__c),ISBLANK( Repository_Name__c ),ISBLANK( Tag__c ),ISBLANK( Commit_ID__c )))</errorConditionFormula>
        <errorDisplayField>Approval_Status__c</errorDisplayField>
        <errorMessage>Branch Name, Commit ID, Tag Number and Repository Name are mandatory before submitting the release for approval.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRAK_Rejected_Reason_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISNEW() &amp;&amp; Rejected__c  == FALSE &amp;&amp; NOT(ISBLANK( Rejected_Reason__c ))</errorConditionFormula>
        <errorDisplayField>Rejected_Reason__c</errorDisplayField>
        <errorMessage>The rejected field needs to be checked to provide a rejection reason.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Tag_Name_Format</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(Contains( Tag__c , &apos;TAG_&apos;)))</errorConditionFormula>
        <errorDisplayField>Tag__c</errorDisplayField>
        <errorMessage>Please enter a valid Tag Number.</errorMessage>
    </validationRules>
</CustomObject>